<resources>
    <string name="app_name">Interior Designs</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="cities_array">

        <item>City</item>
        <item>Islamabad</item>
        <item>Rawalpindi</item>
    </string-array>


    <string-array name="design_category_array">
        <item>Category</item>
        <item>Living</item>
        <item>Dining</item>
        <item>Bedrooms</item>
        <item>Accessories</item>
    </string-array>

    <string name="title_activity_drawer_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Demo User</string>
    <string name="nav_header_subtitle">someone@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_events">My Designs</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_logout">Log Out</string>
    <string name="hint">Search</string>


</resources>