<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/ic_launcher" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input_layout"
                android:layout_width="match_parent"
                android:backgroundTint="@color/design_default_color_on_secondary"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:maxLength="30"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:drawablePadding="10dp"
                android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:backgroundTint="@color/design_default_color_on_secondary"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:textColor="@android:color/black"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLength="30"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:drawablePadding="10dp"
                android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login_singin"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="signInButtonOnClick"
                android:text="@string/action_sign_in_short"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login_signup"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:onClick="signUpButtonOnClickLogin"
                android:background="@color/colorPrimaryDark"
                android:text="Sign up"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>